--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
+  },
+  "volta": {
+    "node": "20.4.0"
   }
 }
