--- a/interface/openapi/schema/memory.yaml
+++ b/interface/openapi/schema/memory.yaml
@@ -1,8 +1,8 @@
 ---
 openapi: 3.1.0
 info:
-  title: memory
+  title: "memory"
   version: 1.0.0
 paths: {}
 oneOf:
-  - "$ref": photoTweetMemory.yaml
+  - "$ref": "photoTweetMemory.yaml"
