--- a/interface/openapi/schema/photoTweetMemory.yaml
+++ b/interface/openapi/schema/photoTweetMemory.yaml
@@ -59,7 +59,7 @@ properties:
           もし概念が複数の単語で表現される場合、ハイフンで結合します。\
           ただし分解能は社会的な程度に過ぎないため、同一のlocationIdでありながら座標などの付随する情報に差異があることは許容されます。"
       geolocation:
-        type: "object",
+        type: "object"
         description: "geolocationは撮影した場所の緯度経度を表現します。\
         バーチャルサナトリウムやなぞのばしょのように緯度経度で表現できない場合、lat, long = 0, 0 (= Null Island)と表現してください。"
         properties:
