ディレクトリ移動し忘れてたので修正

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-22.04
+    defaults:
+      run:
+        working-directory: frontend
 
     steps:
       - uses: actions/checkout@v4
