--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,19 +11,19 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/node": "^2.5.0",
-    "@remix-run/react": "^2.5.0",
-    "@remix-run/serve": "^2.5.0",
+    "@remix-run/node": "2.8.0",
+    "@remix-run/react": "2.8.0",
+    "@remix-run/serve": "2.8.0",
     "isbot": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-tweet": "^3.2.0",
-    "remix-utils": "^7.5.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-tweet": "3.2.0",
+    "remix-utils": "7.5.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.5.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
+    "@remix-run/dev": "2.8.0",
+    "@types/react": "18.2.61",
+    "@types/react-dom": "18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.38.0",
@@ -37,8 +37,8 @@
     "sass": "^1.71.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.1.6",
-    "vite": "^5.0.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite": "5.1.4",
+    "vite-tsconfig-paths": "4.3.1"
   },
   "engines": {
     "node": ">=18.0.0"
