--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -27,10 +27,10 @@ jobs:
         run: npm run build
 
       - name: Copy index.html for SPA
-        run: cp ./dist/index.html ./dist/404.html
+        run: cp ./build/index.html ./build/404.html
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./build
