--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -33,4 +33,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PERSONAL_TOKEN }}
-          publish_dir: ./build/client/
+          publish_dir: ./frontend/build/client/
