--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,31 +4,43 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
+    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "start": "remix-serve ./build/server/index.js",
+    "typecheck": "tsc"
   },
   "dependencies": {
-    "@astrojs/react": "4.1.2",
-    "@astrojs/tailwind": "5.1.4",
-    "astro": "5.1.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-tweet": "3.2.0"
+    "@remix-run/node": "2.8.0",
+    "@remix-run/react": "2.8.0",
+    "@remix-run/serve": "2.8.0",
+    "isbot": "^4.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-tweet": "3.2.0",
+    "remix-utils": "7.5.0"
   },
   "devDependencies": {
-    "@types/node": "20.9.0",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.1",
-    "tailwindcss": "3.4.13",
-    "typescript": "5.6.3"
+    "@remix-run/dev": "2.8.0",
+    "@types/react": "18.2.61",
+    "@types/react-dom": "18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.33",
+    "sass": "^1.71.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.1.6",
+    "vite": "5.1.4",
+    "vite-tsconfig-paths": "4.3.1"
   },
   "engines": {
-    "node": ">=20.0.0"
-  },
-  "volta": {
-    "node": "20.9.0",
-    "npm": "10.1.0"
+    "node": ">=18.0.0"
   }
 }
