--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,36 +11,36 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@remix-run/node": "2.8.0",
-    "@remix-run/react": "2.8.0",
-    "@remix-run/serve": "2.8.0",
-    "isbot": "^4.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-tweet": "3.2.0",
-    "remix-utils": "7.5.0"
+    "@remix-run/node": "2.15.3",
+    "@remix-run/react": "2.15.3",
+    "@remix-run/serve": "2.15.3",
+    "isbot": "5.1.22",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-tweet": "3.2.1",
+    "remix-utils": "8.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "2.8.0",
-    "@types/react": "18.2.61",
-    "@types/react-dom": "18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.33",
-    "sass": "^1.71.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.1.6",
-    "vite": "5.1.4",
-    "vite-tsconfig-paths": "4.3.1"
+    "@remix-run/dev": "2.15.3",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "@typescript-eslint/eslint-plugin": "8.22.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "9.19.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-import-resolver-typescript": "3.7.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.1.0",
+    "postcss": "8.5.1",
+    "sass": "1.83.4",
+    "tailwindcss": "4.0.3",
+    "typescript": "5.7.3",
+    "vite": "6.0.11",
+    "vite-tsconfig-paths": "5.1.4"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.0.0"
   }
 }
