--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,10 +22,10 @@
   },
   "devDependencies": {
     "@remix-run/dev": "2.15.3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/react": "18.3.18",
     "@types/react-dom": "18.3.5",
     "@typescript-eslint/eslint-plugin": "8.22.0",
-    "autoprefixer": "10.4.20",
     "eslint": "8.57.0",
     "eslint-config-prettier": "10.0.1",
     "eslint-import-resolver-typescript": "3.7.0",
@@ -35,7 +35,7 @@
     "eslint-plugin-react-hooks": "5.1.0",
     "postcss": "8.5.1",
     "sass": "1.83.4",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "5.7.3",
     "vite": "5.4.14",
     "vite-tsconfig-paths": "5.1.3"
