--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve ./build/server/index.js",
+    "serve-for-test": "wds --root-dir ./build/client/ --open --base-path=/bakutan-memory-archive/",
     "typecheck": "tsc"
   },
   "dependencies": {
